[gd_scene load_steps=25 format=3 uid="uid://dtsai240jgfre"]

[ext_resource type="Script" path="res://Scripts/MainGame.gd" id="1_2o1ce"]
[ext_resource type="PackedScene" uid="uid://bk8o00im2jvi5" path="res://Scenes/Tilemaps/tile_map_one.tscn" id="2_i1p2k"]
[ext_resource type="Script" path="res://Scenes/Tilemaps/enemy_spawn_path.gd" id="3_j4ram"]
[ext_resource type="PackedScene" uid="uid://cua3hlmjh0vtc" path="res://Pirates/smallPirate.tscn" id="4_kk4xq"]
[ext_resource type="PackedScene" uid="uid://c6apdp7ujregg" path="res://Pirates/pirate.tscn" id="5_bwnl0"]
[ext_resource type="PackedScene" uid="uid://d2530xk7hgwxc" path="res://Pirates/BigPirate.tscn" id="6_rjgid"]
[ext_resource type="PackedScene" uid="uid://ce5jirfeti4lh" path="res://Waves/Wave (1).tscn" id="7_1wh4y"]
[ext_resource type="PackedScene" uid="uid://bmklgqeiiqhsq" path="res://Waves/Wave (2).tscn" id="8_ckg1k"]
[ext_resource type="PackedScene" uid="uid://djakgamecvgsl" path="res://Waves/Wave (3).tscn" id="9_13j0r"]
[ext_resource type="PackedScene" uid="uid://4gely7q7aeh1" path="res://Waves/Wave (4).tscn" id="10_duvf7"]
[ext_resource type="PackedScene" uid="uid://b6uiprcrgfkow" path="res://Waves/Wave (5).tscn" id="11_u2qrp"]
[ext_resource type="PackedScene" uid="uid://csf33avg2qvlc" path="res://Waves/Wave (6).tscn" id="12_j36j6"]
[ext_resource type="Texture2D" uid="uid://27d274dymlj5" path="res://Sprites/inventory.png" id="13_qh6ab"]
[ext_resource type="Texture2D" uid="uid://c4iacoxiabajc" path="res://Sprites/inv1.png" id="14_1d7qs"]
[ext_resource type="Texture2D" uid="uid://c30yhs3n7lpbi" path="res://Sprites/inventoryClosed.png" id="15_dme1s"]
[ext_resource type="Texture2D" uid="uid://cp6ab1s5q7xgd" path="res://Sprites/inv3.png" id="15_e7l73"]
[ext_resource type="Texture2D" uid="uid://bwugv5lhxbixt" path="res://Sprites/inv2.png" id="16_8hyn5"]
[ext_resource type="Texture2D" uid="uid://dcjcxfhc8ore5" path="res://Sprites/Package Bay icon.png" id="16_xpicf"]
[ext_resource type="Texture2D" uid="uid://dyrhl5483ak3e" path="res://Sprites/nextwave.png" id="18_x58yd"]
[ext_resource type="Texture2D" uid="uid://bu0qbh101qdvl" path="res://Sprites/PackageBayWebsite1.png" id="19_2kk7i"]
[ext_resource type="PackedScene" uid="uid://bn6d6k44itruv" path="res://Scenes/porch.tscn" id="19_ucqrc"]
[ext_resource type="Texture2D" uid="uid://be0j6cefkljo8" path="res://Sprites/box.png" id="20_majab"]
[ext_resource type="Texture2D" uid="uid://dscvlls38cw1" path="res://Sprites/Pirate ship.png" id="21_4yawr"]

[sub_resource type="Curve2D" id="Curve2D_l5sy7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1179.02, 1075, 0, 0, 0, 0, 1174.01, 871, 0, 0, 0, 0, 171.015, 866, 0, 0, 0, 0, 165.009, 157, 0, 0, 0, 0, 731.574, 157, 0, 0, 0, 0, 735.578, 407, 0, 0, 0, 0, 423.266, 416, 0, 0, 0, 0, 423.266, 602, 0, 0, 0, 0, 1443.28, 602, 0, 0, 0, 0, 1451.29, 843, 0, 0, 0, 0, 2144.98, 855, 0, 0, 0, 0, 2148.99, 355, 0, 0, 0, 0, 1190.03, 356, 0, 0, 0, 0, 1186.03, 158)
}
point_count = 14

[node name="Game" type="Node2D"]
script = ExtResource("1_2o1ce")

[node name="TileMap" parent="." instance=ExtResource("2_i1p2k")]

[node name="PathSpawner" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="." node_paths=PackedStringArray("waveButton")]
position = Vector2(0.155457, 0)
scale = Vector2(0.999003, 1)
curve = SubResource("Curve2D_l5sy7")
script = ExtResource("3_j4ram")
pirates = Array[PackedScene]([ExtResource("4_kk4xq"), ExtResource("5_bwnl0"), ExtResource("6_rjgid")])
waves = Array[PackedScene]([ExtResource("7_1wh4y"), ExtResource("7_1wh4y"), ExtResource("8_ckg1k"), ExtResource("9_13j0r"), ExtResource("10_duvf7"), ExtResource("11_u2qrp"), ExtResource("12_j36j6"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k"), ExtResource("8_ckg1k")])
waveButton = NodePath("../GUI/Nextwave")

[node name="EnemySpawnTimer" type="Timer" parent="Path2D"]
wait_time = 3.0

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Inventory" type="Node2D" parent="GUI"]

[node name="Open" type="Sprite2D" parent="GUI/Inventory"]
position = Vector2(2103.63, 639.529)
scale = Vector2(1.2, 1.2)
texture = ExtResource("13_qh6ab")

[node name="TextureRect" type="TextureRect" parent="GUI/Inventory/Open"]
offset_left = -137.0
offset_top = -460.0
offset_right = -8.0
offset_bottom = -335.0
texture = ExtResource("14_1d7qs")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="GUI/Inventory/Open"]
offset_left = -136.358
offset_top = -322.107
offset_right = -7.35822
offset_bottom = -197.107
texture = ExtResource("15_e7l73")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="GUI/Inventory/Open"]
offset_left = 7.0
offset_top = -460.0
offset_right = 133.0
offset_bottom = -334.0
texture = ExtResource("16_8hyn5")
expand_mode = 2

[node name="Pez tower" type="TextureButton" parent="GUI/Inventory/Open"]
offset_left = -136.358
offset_top = -460.441
offset_right = -8.35843
offset_bottom = -332.441

[node name="Pool" type="TextureButton" parent="GUI/Inventory/Open"]
offset_left = -136.358
offset_top = -322.107
offset_right = -8.3582
offset_bottom = -194.107

[node name="Battery" type="TextureButton" parent="GUI/Inventory/Open"]
offset_left = 6.97513
offset_top = -460.441
offset_right = 134.975
offset_bottom = -332.441

[node name="Closed" type="Sprite2D" parent="GUI/Inventory"]
position = Vector2(2104, 639)
scale = Vector2(1.2, 1.2)
texture = ExtResource("15_dme1s")

[node name="TextureButton" type="TextureButton" parent="GUI/Inventory"]
offset_left = 2256.0
offset_top = 46.0
offset_right = 2282.0
offset_bottom = 72.0

[node name="Money" type="Label" parent="GUI"]
offset_left = 1.0
offset_right = 300.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 45
text = "P-Bucks: 1000"

[node name="Money2" type="Label" parent="GUI"]
offset_left = 2.0
offset_top = 54.0
offset_right = 301.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 45
text = "Packages: 5"

[node name="Shop" type="Node2D" parent="GUI"]

[node name="WebsiteButt" type="TextureButton" parent="GUI/Shop"]
offset_left = 1732.0
offset_top = 50.0
offset_right = 1886.0
offset_bottom = 182.0
texture_normal = ExtResource("16_xpicf")
stretch_mode = 0

[node name="Shop1" type="Sprite2D" parent="GUI/Shop"]
position = Vector2(1315, 637)
scale = Vector2(1.2, 1.2)
texture = ExtResource("19_2kk7i")

[node name="close shop" type="TextureButton" parent="GUI/Shop/Shop1"]
offset_left = 473.0
offset_top = -494.0
offset_right = 494.0
offset_bottom = -473.0

[node name="Popups" type="Node2D" parent="GUI"]

[node name="Sprite2D" type="Sprite2D" parent="GUI/Popups"]

[node name="Nextwave" type="Sprite2D" parent="GUI"]
position = Vector2(319, 1076)
scale = Vector2(1.2, 1.2)
texture = ExtResource("18_x58yd")

[node name="Next Wave button" type="TextureButton" parent="GUI/Nextwave"]
offset_left = -56.0
offset_top = -27.0
offset_right = 53.0
offset_bottom = 41.0

[node name="Porch" parent="." instance=ExtResource("19_ucqrc")]
position = Vector2(1183, 70)
scale = Vector2(0.275, 0.275)

[node name="Package" type="Sprite2D" parent="Porch"]
position = Vector2(-83.6365, -3.63636)
texture = ExtResource("20_majab")

[node name="Package2" type="Sprite2D" parent="Porch"]
position = Vector2(94.5455, -36.3636)
texture = ExtResource("20_majab")

[node name="Package3" type="Sprite2D" parent="Porch"]
position = Vector2(-170.909, 83.6364)
texture = ExtResource("20_majab")

[node name="Package4" type="Sprite2D" parent="Porch"]
position = Vector2(18.1818, 94.5455)
texture = ExtResource("20_majab")

[node name="Package5" type="Sprite2D" parent="Porch"]
position = Vector2(214.546, 90.9091)
texture = ExtResource("20_majab")

[node name="Ship" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(1171, 1077)
scale = Vector2(1.95062, 1.95062)
texture = ExtResource("21_4yawr")

[connection signal="timeout" from="Path2D/EnemySpawnTimer" to="Path2D" method="_on_enemy_spawn_timer_timeout"]
[connection signal="pressed" from="GUI/Inventory/Open/Pez tower" to="." method="_on_tower1_button_pressed"]
[connection signal="pressed" from="GUI/Inventory/Open/Pool" to="." method="_on_tower3_button_pressed"]
[connection signal="pressed" from="GUI/Inventory/Open/Battery" to="." method="_on_tower2_button_pressed"]
[connection signal="pressed" from="GUI/Inventory/TextureButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="GUI/Shop/WebsiteButt" to="." method="_on_open_shop"]
[connection signal="pressed" from="GUI/Nextwave/Next Wave button" to="Path2D" method="start_wave"]
